<resources>
    <string name="app_name">Robo Bucatarul</string>
    <string name="login_text_button">Login</string>
    <string name="register_link">Don\'t have an account? REGISTER NOW</string>
    <string name="email">Email</string>
    <string name="application_title">Robo Bucatarul</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="message">Message</string>
    <string name="procedure">Recipes</string>

    <string name="action_sign_in_short">Register</string>

    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Full name</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="create_a_new_procedure">Create a new procedure</string>
    <string name="configuration">Configuration</string>
    <string name="communicate">Lista de cumparaturi</string>
    <string name="account">Account</string>
    <string name="send">Trimite lista de cumparaturi</string>
    <string name="log_out">Log out</string>
    <string name="Name">Name</string>
    <string name="titlu_procedura">Titlu procedurii</string>
    <string name="read_a_recipe_stored_in_a_qr">Read a recipe stored in a QR</string>
    <string name="snack_bar_text">Reteta a fost stearsa.</string>
    <string name="snack_bar_undo">Undo</string>
    <string name="adauga_un_nou_pas">Adauga un nou pas</string>
    <string name="salvaeaza_reteta">Salvaeaza reteta</string>
    <string name="buc">buc</string>
    <string name="_12">12</string>
    <string name="verifica_disponibilitatea_produselor">Verifica disponibilitatea produselor!</string>
    <string name="salveaza_lista">Salveaza lista</string>
    <string name="verifica_lista_de_cumparaturi">Verifica lista de cumparaturi</string>
    <string name="setari_lista_de_cumparaturi">Setari lista de cumparaturi</string>
    <string name="lista_salvata">Lista salvata</string>
    <string name="more_info">Mai multe detalii</string>
    <string name="adauga_reteta_din_qr_code">Adauga reteta din QR code</string>
    <string name="creaza_o_reteta_noua">Creaza o reteta noua</string>
    <string name="toate_retetele">Toate Retetele</string>
    <string name="setari_cont">Setari Cont</string>
</resources>


