<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_procedures"
            android:icon="@drawable/ic_procedure"
            android:title="@string/toate_retetele" />
        <item
            android:id="@+id/nav_createProcedure"
            android:icon="@drawable/ic_create"
            android:title="@string/creaza_o_reteta_noua" />
        <item
            android:id="@+id/nav_read_qr_recipe"
            android:icon="@drawable/ic_qr_reader"
            android:title="@string/adauga_reteta_din_qr_code" />
    </group>
    <item
        android:id="@+id/shopping_list_settings"
        android:title="@string/setari_lista_de_cumparaturi">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_share"
                android:title="@string/verifica_lista_de_cumparaturi" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_send"
                android:title="@string/send" />
        </menu>
    </item>
    <item android:title="@string/setari_cont">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/log_out" />
        </menu>
    </item>
</menu>